--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,15 @@ ul{
     height: auto;
 }
 
+.element{
+    margin: 5px 0;
+    padding: 5px;
+    font-size: 1.5em;
+}
+
+.element:hover{
+    color: white;
+    background-color:cadetblue;
+    text-decoration: none;
+}
+
